Grease Pencil fill areas look divided by multiples ray lines #43149

Closed
opened 2015-01-06 21:27:11 +01:00 by Matias Mendiola · 19 comments

System Information:
Windows 7 64bit (SP 1) - NVIDIA GeForce GTX 560

Blender Version
Broken: 2.73 release candidate 273fa0a with NVIDIA GeForce GTX 560
Worked: 2.73 release candidate 273fa0a with INTEL HD Graphics 4000

Short description of error
Grease Pencil fill areas look divided by multiples ray lines
I've tested on two computers and only looks weird on the one that use NVIDIA GeForce GTX 560

Exact steps for others to reproduce the error
Draw with grease pencil and set color fill to 1.0 with a light color to better see the problem

GP_BUG_fill_area.blend

BUG_fill_area_sample.JPG

**System Information:** Windows 7 64bit (SP 1) - NVIDIA GeForce GTX 560 **Blender Version** Broken: 2.73 release candidate 273fa0a with NVIDIA GeForce GTX 560 Worked: 2.73 release candidate 273fa0a with INTEL HD Graphics 4000 **Short description of error** Grease Pencil fill areas look divided by multiples ray lines I've tested on two computers and only looks weird on the one that use NVIDIA GeForce GTX 560 **Exact steps for others to reproduce the error** Draw with grease pencil and set color fill to 1.0 with a light color to better see the problem [GP_BUG_fill_area.blend](https://archive.blender.org/developer/F135640/GP_BUG_fill_area.blend) ![BUG_fill_area_sample.JPG](https://archive.blender.org/developer/F135641/BUG_fill_area_sample.JPG)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @mendio

Added subscriber: @mendio
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Can you post a good and bad picture?

Can you post a good and bad picture?
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Cannot recreate that here using a GTX570 (Linux 64bit). First guess would be outdated graphics drivers. Can you check if you use this one ?

Cannot recreate that here using a GTX570 (Linux 64bit). First guess would be outdated graphics drivers. Can you check if you use [this one ](http://www.nvidia.com/download/driverResults.aspx/80913/en-us)?
Author
Member

I've updated NVIDIA drivers and the problem continues.

This is the requested good/bad picture:

BUG_fill_area_Comparision.JPG

I've updated NVIDIA drivers and the problem continues. This is the requested good/bad picture: ![BUG_fill_area_Comparision.JPG](https://archive.blender.org/developer/F135733/BUG_fill_area_Comparision.JPG)
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali
Member

I can confirm the same behavior on my laptop, nvidia card, using the latest drivers supplied by rpmfusion on fedora 21.
It does not happen on my desktop on fedora 20 :/

I can confirm the same behavior on my laptop, nvidia card, using the latest drivers supplied by rpmfusion on fedora 21. It does not happen on my desktop on fedora 20 :/
Joshua Leung self-assigned this 2015-01-10 00:28:41 +01:00
Member

The good news is that it happens here for me too :)

I was surprised when I first noticed it, since I don't really recall seeing it initially (or maybe, I just didn't look hard enough). Anyways, I guess the best solution here is just to implement a nicer way of doing fills. The current approach using OpenGL GL_POLYGON mode was intended as an initial implementation so that we have something we can play with.

NVidia GeForce GT 740M - 331.82

The good news is that it happens here for me too :) I was surprised when I first noticed it, since I don't really recall seeing it initially (or maybe, I just didn't look hard enough). Anyways, I guess the best solution here is just to implement a nicer way of doing fills. The current approach using OpenGL GL_POLYGON mode was intended as an initial implementation so that we have something we can play with. NVidia GeForce GT 740M - 331.82
Member

Added subscribers: @JoshuaLeung, @CodeManX

Added subscribers: @JoshuaLeung, @CodeManX
Member

@JoshuaLeung: are you planning on rolling custom tessellation code to allow PacMan? There are two algorithms used elsewhere, scanlines and ear-clipping (ideasman probably knows best)

@JoshuaLeung: are you planning on rolling custom tessellation code to allow PacMan? There are two algorithms used elsewhere, scanlines and ear-clipping (ideasman probably knows best)
Member

@CodeManX My preference at this stage is to reuse the method used for Lasso drawing. The only problem there is figuring out what plane to draw on / ensuring that the layering order remains sane.

@CodeManX My preference at this stage is to reuse the method used for Lasso drawing. The only problem there is figuring out what plane to draw on / ensuring that the layering order remains sane.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is caused by glEnable(GL_POLYGON_SMOOTH);, disabling fixes

This is caused by `glEnable(GL_POLYGON_SMOOTH);`, disabling fixes

This issue was referenced by 387d91829d

This issue was referenced by 387d91829d787ac96afbb2b3f86899e0e3346222
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 387d91829d.

Closed by commit 387d91829d.
Member

@ideasman42 Thanks for finding that! Indeed, reading up on this, it seems to indeed be quite problematic.

A note for artists using Grease Pencil after this fix:
You'll need to enable Viewport Multisampling to avoid the jaggies which will now show up again on the edges of volumetric strokes and filled areas.

@ideasman42 Thanks for finding that! Indeed, reading up on this, it seems to indeed be quite problematic. A note for artists using Grease Pencil after this fix: You'll need to enable Viewport Multisampling to avoid the jaggies which will now show up again on the edges of volumetric strokes and filled areas.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43149
No description provided.